--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "com.github.jknack:handlebars:4.1.2"
+    implementation "androidx.preference:preference-ktx:1.0.0"
     kapt "androidx.room:room-compiler:$room_version"
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.arch.core:core-testing:2.0.0'
