--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     implementation "com.github.jknack:handlebars:4.1.2"
     implementation "androidx.preference:preference-ktx:1.0.0"
+    implementation "com.squareup.okhttp3:okhttp:3.14.2"
+    implementation "com.squareup.moshi:moshi:$moshi_version"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
     kapt "androidx.room:room-compiler:$room_version"
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.arch.core:core-testing:2.0.0'
